<resources>
    <string name="app_name">Just News</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings">Settings</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </string>
    <string name="news_image">News image</string>
    <string name="read_more">Read more</string>
    <string name="source">Source</string>
    <string name="like_source">Like source</string>
    <string name="refresh">Refresh</string>
    <string name="top">Top</string>
    <string name="favorite">Favorite</string>
    <string name="general">General</string>
    <string name="tech">Tech</string>
    <string name="business">Business</string>
    <string name="connection_timeout">Connection timed out.</string>
    <string name="cannot_connect_internet">Cannot connect to internet.</string>
    <string name="there_are_not_any_news">There are not any news.</string>
    <string name="sad_face_icon">Sad face icon</string>
    <string name="favorite_added">Added to favorites!</string>
</resources>
